2008-01-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* pop3d/bulletin.c (open_bulletin_mailbox): Bugfix.

2008-01-24  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/cfg_driver.c (mu_cfg_section_add_params): Initialize
	section.target with param->data;
	* mailbox/stream.c (mu_stream_vprintf): Bugfix.

2008-01-22  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/listop.c (find): Fix copy-n-paste error.
	(iter): Return error code.
	(main): Create iterators on demand.
	New command `close'.

	* mailbox/iterator.c (mu_iterator_detach): Bugfix.
	
2008-01-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/acl.h, include/mailutils/debug.hm4,
	mailbox/acl.c (mu_sockaddr_to_str, mu_sockaddr_to_astr)
	(mu_acl_check_sockaddr, mu_acl_check_inaddr): Use const pointers
	when appropriate.

	* include/mailutils/cfg.h (mu_offsetof): Move mu_offsetof to
	types.hin.
	* include/mailutils/types.hin (mu_offsetof): New macro.
	* mailbox/acl.c (MU_S_UN_NAME): New macro.
	(debug_sockaddr, mu_sockaddr_to_str, _acl_match)
	(_run_entry): Take into account salen for AF_UNIX.

2008-01-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/gocs.h (log_facility): Remove.
	* include/mailutils/syslog.h (mu_log_facility, mu_log_tag): New
	declarations.
	(MU_LOG_TAG): New define.
	* mailbox/gocs.c (mu_gocs_logging_init): Set mu_log_tag.
	* mailbox/syslog.c (mu_log_facility, mu_log_tag): New variables.
	* libcfg/common.c (mu_logging_param): New statement `tag'. 
	* comsat/comsat.c, imap4d/imap4d.c, imap4d/login.c,
	maidag/maidag.c, mail.local/main.c, pop3d/pop3d.c, pop3d/user.c,
	sieve/sieve.c: Use MU_LOG_TAG in openlog, and
	program_version in mu_m_server_create calls.

	* libsieve/conf.c (mu_sieve_module_init): Remove initial call to
	_path_append.
	* libsieve/load.c (sieve_init_load_path): New function.
	(load_module,sieve_load_add_path,sieve_load_add_dir): Call
	sieve_init_load_path.
	* mail.local/main.c (parse_opt): Bugfix. Translate -S option to